2006-07-08  yonekawa(S2Dao.PHP5-1.1.0)

    * add: Json,YAML形式のResultに対応しました。
	   S2Dao_PagerResultSetWrapperImpl
	   S2Dao_PagerJsonResultSetWrapper
	   S2Dao_PagerYamlResultSetWrapper
	   S2Dao_PagerResultSetWrapperFactory
           S2Dao_PagerUtil
    * delete: S2Dao_PagerResultSetWrapper::create -> S2Dao_PagerResultSetWrapper::filter
    * modify: S2Dao_PagerResultSetWrapper -> S2Dao_PagerResultSetWrapperImpl
    * modify: class S2Dao_PagerResultSetWrapper -> interface S2Dao_PagerResultSetWrapper

2006-07-08 nowel(S2Dao.PHP5-1.1.0)

    * add: S2Dao_MapResultSetHandller
    * move: /extension/db/S2Dao_ObjectResultSetHandler
            to /dao/resultset/S2Dao_ObjectResultSetHandler

2006-07-06 nowel(S2Dao.PHP5-1.1.0)

    * fix: SQLコメントのELSEが正しく動作しない不具合を修正しました。

2006-07-02 nowel(S2Dao.PHP5-1.1.0)

    * fix[DAOPHP-4]: S2Dao_BasicSelectHandlerでカラム数が0の場合に正しく結果を取得できない不具合を修正しました。
        - modify: カラム数が0またはnullの場合はS2Dao_BasicSelectHandlerはnullを返すように変更しました。
    * modify: S2Dao_ObjectResultSetHandlerで指定したクラスのオブジェクトマッピングが正しく行えない不具合を修正しました。

2006-07-01 nowel(S2Dao.PHP5-1.1.0)

    * merge: S2Dao.PHP5-1.1.0-RC5 and S2Dao.PHP5-1.1.0(stable)

2006-06-25  yonekawa  <tcgrim@gmail.com>

    * fix: S2Pagerを使用して検索結果が１件だった時にNULLが返る不具合を修正しました。 

2006-06-22 nowel(S2Dao.PHP5-1.1.0-RC5)

    * add: DBMSにSybase(ASE-15.0)のサポートをしました。
    * add: ResultSetの形式にJSONを追加しました。
    * modify: BasicHandlerでPDOの型とPHPの型のマッピングを必ず行うように変更しました。

2006-06-19 nowel(S2Dao.PHP5-1.1.0-RC5)

    * add: extenstion/dataset
        - S2Dao_DataColumnImpl.class.php
        - S2Dao_DataRowImpl.class.php
        - S2Dao_DataTableImpl.class.php
    * fix: PhingTaskで正常に実行されない不具合を修正しました。

2006-06-18  yonekawa(S2Dao.PHP5-1.1.0-RC5)

    * fix[DAOPHP-2]: S2Dao_PagerSupportにて、session_startの重複エラーが起きるのを修正しました。[DAOPHP-2]

2006-06-17 nowel(S2Dao.PHP5-1.1.0-RC5)

    * fix: コメントアノテーション時に正しくアノテーションクラスが読み込めない不具合を修正しました。
    * fix: S2Dao_ClassLoaderが不要なパッケージを参照していたのを修正しました。
    * move: context パッケージを移動しました。