@@ -2,13 +2,8 @@
 <!DOCTYPE components PUBLIC "-//SEASAR//DTD S2Container//EN"
 "http://www.seasar.org/dtd/components21.dtd">
 <components namespace="dao">
-
     <include path="%PDO_DICON%" />
-
-    <component class="S2Dao_BasicResultSetFactory" />
-    <component class="S2Dao_BasicStatementFactory" />
     <component class="S2Dao_FieldAnnotationReaderFactory" />   
     <component class="S2Dao_DaoMetaDataFactoryImpl" />
     <component name="interceptor" class="S2DaoInterceptor" />
-    
 </components>
