@@ -31,19 +31,14 @@ interface S2Dao_DaoMetaData {
     const FILE = 'FILE';
 
     public function getBeanClass();
-
     public function getBeanMetaData();
-
     public function hasSqlCommand($methodName);
-
     public function getSqlCommand($methodName);
-
     public function createFindCommand($query);
-
     public function createFindArrayCommand($query);
-
     public function createFindBeanCommand($query);
-
+    public function createFindYamlCommand($query);
+    public function createFindJsonCommand($query);
     public function createFindObjectCommand($query);
 }
 ?>
